# opengles4android

./: .gitignore  README.md  build.gradle  config.gradle  debug.jks  gradle.properties  module.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
common/: build.gradle
common-base/: build.gradle
common-router/: build.gradle
common-router/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
opengles-camera/: build.gradle
opengles-color/: CMakeLists.txt  build.gradle
opengles-color/src/main/: AndroidManifest.xml
opengles-color/src/main/cpp/: native_color.c  native_color.h
opengles-color/src/main/java/com/onzhou/opengles/color/: ColorActivity.java  ColorRenderer.java  NativeColorRenderer.java
opengles-color/src/main/java/com/onzhou/opengles/main/: ColorActivity.java
opengles-color/src/main/res/raw/: triangle_vertex_shader.glsl
opengles-filter/: build.gradle
opengles-native/: CMakeLists.txt  build.gradle
opengles-native/src/main/cpp/: native_window.cpp
opengles-native/src/main/java/com/onzhou/opengles/main/: NativeWindowActivity.java
opengles-native/src/main/java/com/onzhou/opengles/nativewindow/: NativeWindowSample.java
opengles-native/src/main/res/layout/: activity_native_window.xml
opengles-native/src/main/res/values/: strings.xml
opengles-redenerer/: build.gradle
opengles-renderer/: build.gradle
opengles-sample/: build.gradle
opengles-simple/: CMakeLists.txt  build.gradle
opengles-texture/: build.gradle
opengles-triangle/: CMakeLists.txt  build.gradle
opengles-triangle/src/main/: AndroidManifest.xml
opengles-triangle/src/main/cpp/: native_triangle.c  native_triangle.h
opengles-triangle/src/main/java/com/onzhou/opengles/triangle/: TriangleActivity.java  TriangleRenderer.java
opengles-triangle/src/main/res/raw/: triangle_fragment_shader.glsl  triangle_vertex_shader.glsl
opengles3x-cpp/: CMakeLists.txt  build.gradle
opengles3x-cpp/src/main/cpp/render/: CMakeLists.txt  native_color.cpp  native_color.h  native_renderer_jni.cpp  native_simple.cpp  native_simple.h
opengles3x-java/: build.gradle
readme/: android平台下OpenGL ES 3.0给图片添加黑白滤镜.md  android平台下OpenGLES3.0从矩形中看矩阵和正交投影.md  android平台下OpenGLES3.0从零开始.md  android平台下OpenGLES3.0使用GLSurfaceView对相机Camera预览实时处理.md  android平台下OpenGLES3.0使用TextureView对相机Camera预览实时处理.md  android平台下OpenGLES3.0实例详解顶点属性、顶点数组.md  android平台下OpenGLES3.0实例详解顶点缓冲区对象(VBO)和顶点数组对象(VAO).md  android平台下OpenGLES3.0实现2D纹理贴图显示bitmap.md  android平台下OpenGLES3.0着色语言基础知识(上).md  android平台下OpenGLES3.0着色语言基础知识(下).md  android平台下OpenGLES3.0绘制圆点、直线和三角形.md  android平台下OpenGLES3.0绘制彩色三角形.md  android平台下OpenGLES3.0绘制立方体的几种方式.md  android平台下OpenGLES3.0绘制纯色背景.md  android平台下基于ANativeWindow实现渲染bitmap对像.md
sample-basis/: build.gradle
sample-camera/: gradle.properties
sample-color/: build.gradle
sample-filter/: gradle.properties
sample-native/: build.gradle
(+237 files in other folders)
